--- a/cv.html
+++ b/cv.html
@@ -35,7 +35,7 @@ layout: home
     <div class="row">
       <div class="col">
         <h1 class="display-4 text-center">{{ site.data.bio.basics.name }}</h1>
-        <p class="text-center">Abbreviated Curriculum Vitae (complete CV is <a href="https://github.com/philipmjohnson/cv/raw/master/philipmjohnson-cv.pdf">here</a>)</p>
+        <p class="text-center">Abbreviated Curriculum Vitae (complete CV is <a href="https://github.com/XiangLi-USF/xiangli-usf.github.io/blob/main/CV_XiangLi.pdf">here</a>)</p>
       </div>
     </div>
 
