--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ layout: home
 ---
 
 {% include about/about.html %}
-{% include Projects/project.html limit=4 %}
+{% include Projects/projects.html limit=4 %}
 {% include essays/essays.html limit=6 %}
