--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
     <a class="navbar-brand" href="/">Xiang Li</a>
     <div class="ms-auto">
       <ul class="navbar-nav mb-2 mb-lg-0">
-        <a class="nav-link" href="/#projects">Projects</a>
+        <a class="nav-link" href="/#program">Projects</a>
         <a class="nav-link" href="/#essays">Essays</a>
         <a class="nav-link" href="/cv.html">CV</a>
       </ul>
