deploy: 567bd25d80ec3005d29946c4716d241a6d45c9f6

--- a/essays/evacuationian.html
+++ b/essays/evacuationian.html
@@ -71,7 +71,7 @@
 </ul>
 
 <h2 id="3-methods">3. Methods</h2>
-<p><img class="img-" src="/img/evacuation/framework.png" /></p>
+<p><img class="img-" src="/img/evacuation/framework.jpg" /></p>
 
 <p>The analysis of evacuation patterns during Hurricane Ian employs a structured analytical workflow designed to capture and interpret large-scale human mobility data. The workflow begins by defining the study period, which is divided into three distinct phases: the pre-hurricane phases (3 weeks before the landfall), in-hurricane (the week right after the landfall), and post-hurricane (the following week). During these periods, population movements are analyzed both within Florida and beyond, with a particular focus on the areas most affected by the hurricane.</p>
 
