deploy: 34be585939ad26aabfdfa51a1ddeb4bb37a7310a

--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="col">
         <h1 class="display-4 text-center">Xiang Li</h1>
-        <p class="text-center">Abbreviated Curriculum Vitae (complete CV is <a href="https://github.com/XiangLi-USF/xiangli-usf.github.io/blob/main/CV_XiangLi.pdf">here</a>)</p>
+        <p class="text-center">Abbreviated Curriculum Vitae (complete CV is <a href="https://github.com/XiangLi-USF/xiangli-usf.github.io/blob/main/CV_XiangLi_20250404.pdf">here</a>)</p>
       </div>
     </div>
 
