deploy: c35dc37fa6b7cf2fbd1b6e8258c406be65db5201

--- a/essays/evacuationian.html
+++ b/essays/evacuationian.html
@@ -42,7 +42,9 @@
   <h1 class="display-4">Using Human Mobility Data to Detect Evacuation Patterns in Hurricane Ian</h1>
   <span class="date">14 Apr 2024</span>
   <hr>
-  <p><a href="https://doi.org/10.1080/19475683.2024.2341703">Article Link</a></p>
+  <p>Authors: Xiang Li, Yi Qiang, Guido Cervone</p>
+
+<p><a href="https://doi.org/10.1080/19475683.2024.2341703">Article Link</a></p>
 
 <ol>
   <li><a href="#1-the-highlight-of-this-article">The highlight of this article</a></li>
