--- a/essays/mobilitybook.html
+++ b/essays/mobilitybook.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Book Chapter: Natural Disasters and Urban Human Mobility (in proof). | Xiang Li | Professional Portfolio">
+    <meta name="title" content="Book Chapter: Natural Disasters and Urban Human Mobility | Xiang Li | Professional Portfolio">
     <meta name="description" content="">
     <meta name="image" content="https://avatars.githubusercontent.com/u/111073560?s=400&u=f4fc1e6e53c53d74f3c5d2bac139be59c15bebca&v=4">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Xiang Li | Professional Portfolio">
     <meta property="og:url" content="https://xiangli-usf.github.io//essays/mobilitybook.html">
-    <meta property="og:title" content="Book Chapter: Natural Disasters and Urban Human Mobility (in proof). | Xiang Li | Professional Portfolio">
+    <meta property="og:title" content="Book Chapter: Natural Disasters and Urban Human Mobility | Xiang Li | Professional Portfolio">
     <meta property="og:description" content="">
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/111073560?s=400&u=f4fc1e6e53c53d74f3c5d2bac139be59c15bebca&v=4">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -22,7 +22,7 @@
     </script>
     
 
-    <title>Book Chapter: Natural Disasters and Urban Human Mobility (in proof). | Xiang Li | Professional Portfolio</title>
+    <title>Book Chapter: Natural Disasters and Urban Human Mobility | Xiang Li | Professional Portfolio</title>
   </head>
   <body>
   <header class="navbar navbar-expand navbar-light bg-light bg-gradient border-bottom">
@@ -39,10 +39,15 @@
 </header>
 
 <div class="container py-4">
-  <h1 class="display-4">Book Chapter: Natural Disasters and Urban Human Mobility (in proof).</h1>
-  <span class="date"></span>
+  <h1 class="display-4">Book Chapter: Natural Disasters and Urban Human Mobility</h1>
+  <span class="date">30 Jun 2025</span>
   <hr>
-  
+  <p>Li, X., &amp; Qiang, Y. (2025). Natural Disasters and Urban Human Mobility. In Urban Human Mobility (pp. 40-50). CRC Press.</p>
+
+<p><a href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003503262-7/natural-disasters-urban-human-mobility-xiang-li-yi-qiang">Chapter Link</a></p>
+
+<h2 id="abstract">ABSTRACT</h2>
+<p>This chapter highlights the critical value of analyzing urban human mobility during natural disasters, focusing on how emerging data sources and advanced analytical techniques inform disaster response, preparedness, and resilience planning. As urbanization intensifies and climate-related hazards become more frequent, understanding evacuation patterns, transportation disruptions, and compliance with evacuation orders is increasingly vital. The chapter first reviews traditional survey methods and introduces newer data types—including mobile phone global positioning system (GPS) traces, social media posts, and remote sensing imagery—that provide near real-time, high-resolution insights into population movements. It then discusses cutting-edge geospatial artificial intelligence (GeoAI) approaches for integrating these diverse datasets to detect complex mobility patterns. A case study of Hurricane Ian in Florida demonstrates how mobility data can uncover spatial variations in evacuation behaviors and highlight the impacts of evacuation orders. This example illustrates how data-driven methods reveal routes, destinations, and population segments most affected, guiding more equitable and effective interventions. Despite these advances, challenges remain concerning privacy, data representativeness, and integrating multisource information. The chapter concludes that as data and technologies evolve, harnessing human mobility insights will enhance disaster preparedness, promote targeted resource allocation, and ultimately support the development of more resilient urban communities.</p>
 
 </div>
 
